# FH-phasefield

./: .gitignore  analisis_curvatura.py  analisis_curvatura_notebook.ipynb  cesaro.py  copy_outputs.sh  cracks.py  create_mesh.sh  curving_fracture.py  curving_hydraulic_fracture.py  demo_hf_planestrain.py  extract_frpath.py  extract_paths.sh  funcs.py  hf_benchmark_planestrain_vol.py  hf_benchmark_planestrain_vol_algo2.py  ite.superposicion.py  main.py  material_model.py  mesh_setup.py  meshing.py  output_utils.py  phasefield_forces.ipynb  plot_pvst.py  post_process_HyE.py  post_process_HyEv2.py  post_process_curves.py  post_process_plots.py  post_process_points.py  pyproject.toml  remote_sync_results.sh  run_benchmark.sh  run_case.sh  run_curving_analysis.sh  run_job.sh  run_remote_simulation.sh  superposicion.py  sync_code_server.sh  utils.py
data/: data_fenicsx.json  gmsh_1.json  gmsh_heterogeneo.json  lab.json  lab_gmsh.json  lab_rect.json  pressure_solver_test.json  rect.json  shallow_30.json  shallow_40.json
deprecated/: analisis_curvatura.py  curving_fracture.py  dummy_figures.py  kgd_fracture.py  plot_pvst.py  post_process_points.py  static_fracture.py
examples/: material_capas.py  rotate_loads.py  test_pressure_solvers.py
meshes/: assym.geo  axisymmetrical.geo  benchmark_planestrain.geo  benchmark_tanne.geo  benchmark_tanne_11h.geo  curving.geo  curving_2.geo  curving_H.geo  curving_H_20.geo  curving_H_30.geo  curving_H_min.geo  curving_H_sym.geo  curving_sym.geo  demo_fenicsx.geo  demo_phasefield.geo  plane_sym.geo
src/: boundary_conditions.py  config.py  (+11 more)
(+57 files in other folders)
